--- a/.github/workflows/deploy-docusaurus.yml
+++ b/.github/workflows/deploy-docusaurus.yml
@@ -25,8 +25,10 @@ jobs:
         run: |
           npm install 
           npm run build
+          npm run crowdin:sync
         env:
           POSTHOG_API_KEY: ${{ secrets.POSTHOG_API_KEY }}
+          CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_PERSONAL_TOKEN }}
       - name: Deploy to GitHub Pages
         if: success()
         uses: crazy-max/ghaction-github-pages@v2
