--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "crowdin": "crowdin",
-    "version": "docusaurus doc:version"
+    "version": "docusaurus doc:version",
+    "crowdin:sync": "docusaurus write-translations && crowdin upload && crowdin download"
   },
   "dependencies": {
     "@crowdin/cli": "^3.7.8",
