--- a/website_config.json
+++ b/website_config.json
@@ -2,5 +2,5 @@
   "TWITTER_NAME": "alejo_coca",
   "LINKEDIN_NAME": "alejandro-coca-castro",
   "GITHUB_USER": "acocac",
-  "REPOSITORY_NAME": "/"
+  "REPOSITORY_NAME": "acocac.github.io"
 }
