--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   },
   "dependencies": {
     "@crowdin/cli": "^3.7.8",
-    "@docusaurus/core": "^2.0.0-beta.21",
-    "@docusaurus/plugin-google-gtag": "^2.0.0-beta.21",
-    "@docusaurus/preset-classic": "^2.0.0-beta.21",
+    "@docusaurus/core": "^2.0.1",
+    "@docusaurus/plugin-google-gtag": "^2.0.1",
+    "@docusaurus/preset-classic": "^2.0.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^6.0.0",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
